--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
         <!-- CSS Style Sheets -->
         <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-        <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+        <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
 
         <!-- Links to Scripts -->
         <script src="https://code.jquery.com/jquery.js"></script>
