--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
 
         <!-- Links to Scripts -->
         <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="/assets/js/cats.js"></script>
 
     </head>
 
