--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,11 +20,16 @@
 
     <body>
 
+        <header>
+			<img src="assets/images/tastyBurger.png" alt="That is One Tasty Burger!" id="headImage">
+		</header>
+
         {{{body}}}
 
     </body>
 
     <footer>
+        <p id="footText">&#169; 2018 Paul Hoffman Design </p>
         
     </footer>
 
