--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,6 @@
 
     <div class="burgers">
 
-        <h1>That is One Tasty Burger!</h1>
-
         <h3>Burger List</h3>
 
         <ul>
@@ -17,13 +15,19 @@
                 <!-- {{/unless}}  -->
             {{/each}}
         </ul>
-
-        <h3>Devoured Burgers</h3>
         
     </div>
 
     <div class="devoured">
 
+        <h3>Devoured Burgers</h3>
+
+        <ul>
+            {{#each burgers}}
+                {{#if devoured}}
+                {{/if}}
+            {{/each}}
+        </ul>
 
         
     </div>
