--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,10 +1,11 @@
 /* ========== Layout Styles ==========*/
 
 html {
-    height: 100%;
+    height: 80%;
 }
 
 body {
+    height: 100%;
     background-color: #efc612;
     font-family: 'Courier New', Courier, monospace;
     font-size: 18px;
@@ -19,15 +20,22 @@ header {
 
 .container {
     width: 1200px;
-    padding: 30px 30px 35px 30px;
+    min-height: 100%;
     margin: 0 auto;
     flex: 1 0 auto;
 }
 
-.burger {
+.burgers {
     float: left;
-    width: 50%;
+    width: 50%;background-color: pink;
 }
+
+/*#burgerList {
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+    background-color: aqua;
+}*/
 
 .devoured {
     float: right;
@@ -38,8 +46,8 @@ footer {
     background-color: #bb2001;
     text-align: center;
     border-top: 4px solid black;
-    padding: 10px 0px; 
-    flex-shrink: 0;
+    padding: 10px 0px;
+    flex-shrink: 0; 
 }
 
 /* ========== Text Styles ==========*/
@@ -48,6 +56,11 @@ h3 {
     font-size:28px;
     font-weight: bold;
     text-align: center;
+    margin: 30px 0px 20px 0px;
+}
+
+ul {
+    margin-left: -30px;
 }
 
 #footText {
@@ -62,6 +75,6 @@ h3 {
     display: block;
     margin: 0 auto;
     padding: 10px 0px;
-    max-width: 1200px;
+    max-width: 100%;
     max-height: auto;
 }
